Added ggplot R code

--- a/report/Deap_Bhandal_Final_Project.tex
+++ b/report/Deap_Bhandal_Final_Project.tex
@@ -209,6 +209,51 @@ def regex_count(file, num=1, col_regex=r'\b[\w]+\b'):
 # counting cases of all words in 'individual' column
 regex_count('Dataset.csv', 7)
 \end{verbatim}
+\subsection{Using ggplot2 to see Precise Locations of Species}
+\begin{verbatim}
+# importing the tidyverse module
+library(tidyverse)
+
+# checking the working directory
+getwd
+# setting the working directory to Documents directory
+setwd("C:/Users/Bhandal/Documents")
+
+# loading the dataset with read_csv from the Downloads directory
+dataset <- read_csv("C:/Users/Bhandal/Downloads/Dataset.csv")
+
+# assigning the variable to the ggplot
+#that will have Species for its x-axis
+#and Latitude for its y-axis
+Species_v_Latitude <- ggplot(data = dataset, mapping = aes(x = Species, y = Latitude))+
+  # underlayed graph will be a jitter plot and
+  #dots will be semi translucent green (for trees)
+  geom_jitter(alpha = 0.2, color = "green")+
+  # overlayed graph will be box plot (transparent)
+  geom_boxplot(alpha = 0)+
+  # setting formatting for title
+  theme(plot.title = element_text(size = rel(1), face = "bold", hjust = 0.5))+
+  # naming the title
+  ggtitle("Species vs. Latitude")
+
+# assigning the variable to the ggplot
+#that will have Species for its x-axis
+#and Longitude for its y-axis
+Species_v_Longitude <- ggplot(data = dataset, mapping = aes(x = Species, y = Longitude))+
+  # underlayed graph will be a jitter plot and
+  #dots will be semi translucent green (for trees)
+  geom_jitter(alpha = 0.2, color = "green")+
+  # overlayed graph will be box plot (transparent)
+  geom_boxplot(alpha = 0)+
+  # setting formatting for title
+  theme(plot.title = element_text(size = rel(1), face = "bold", hjust = 0.5))+
+  # naming the title
+  ggtitle("Species vs. Longitude")
+
+# saving both plots in the working directory (Documents)
+ggsave(Species_v_Latitude, file="Species_v_Latitude.png", width=6, height=4)
+ggsave(Species_v_Longitude, file="Species_v_Longitude.png", width=6, height=4)
+\end{verbatim}
 \section{Results}
 \subsection{All Locations}
 \begin{verbatim}
@@ -240,7 +285,9 @@ Please see Figures \ref{fig:Foliar_Area_vs_19} (on page \pageref{fig:Foliar_Area
 \subsection{Mode of each Climate Data Column}
 I plan to refine my code further to only find the mode of each climate data as that might be more useful than seeing dictionaries for each column
 \subsection{Occurances of Individuals' Codes}
-I plan to refine my code further to be a list of tuples so it is easier to see in the document. 
+I plan to refine my code further to be a list of tuples so it is easier to see in the document.
+\subsection{Latitude and Longitude}
+Please see Figures \ref{fig:SLat} (on page \pageref{fig:SLat}) and \ref{fig:SLong} (on page \pageref{fig:SLong}). 
 \section{Discussion}
 I plan to expand on the usefulness of any extracted data and the functions that allowed me to acheive that. 
 
@@ -516,6 +563,18 @@ I plan to expand on the usefulness of any extracted data and the functions that 
 \caption{Foliar Area vs Climate Data 56\label{fig:Foliar_Area_vs_56}}
 \centering
 \includegraphics[width=0.7\paperwidth]{Foliar_Area_vs_56}
+\end{figure}
+
+\begin{figure}[h]
+\caption{Species vs. Latitude\label{fig:SLat}}
+\centering
+\includegraphics[width=0.7\paperwidth]{Species_v_Latitude}
+\end{figure}
+
+\begin{figure}[h]
+\caption{Species vs. Longitude\label{fig:SLong}}
+\centering
+\includegraphics[width=0.7\paperwidth]{Species_v_Longitude}
 \end{figure}
 
 
